# SLang

./: CMakeLists.txt  Grammar  README.md  SLang  lang2_0
include/: ast.h  builtin_functions.h  lexer.h  parse.h  symtable.h  token.h  type.h
include/ast_types/: ASTAssignment.h  ASTFunCall.h  ASTFunction.h  ASTFunctionDecl.h  ASTIf.h  ASTInput.h  ASTOperation.h  ASTPrint.h  ASTReturn.h  ASTVariable.h  ASTWhile.h  FunctionContext.h
src/: ast.cpp  builtin_functions.cpp  code.txt  lexer.cpp  main.cpp  parse.cpp  symtable.cpp  token.cpp  type.cpp
src/ast_types/: ASTAssignment.cpp  ASTFunCall.cpp  ASTFunction.cpp  ASTFunctionDecl.cpp  ASTIf.cpp  ASTInput.cpp  ASTOperation.cpp  ASTPrint.cpp  ASTReturn.cpp  ASTVariable.cpp  ASTWhile.cpp  FunctionContext.cpp
